# farbe

./: .gitattributes  .gitignore  LICENSE  README.md  cabal.project  deletion-reasoning.md  farbe.cabal  index.html  introduction-to-opengl.md  todo.md
src/Control/Concurrent/MVar/: Lifted.hs
src/Graphics/: Farbe.hs
src/Graphics/Farbe/: Array.hs  Attribute.hs  BuildShader.hs  Chan.hs  Counter.hs  DChan.hs  DMap.hs  Delay.hs  Expr.hs  Farbe.hs  GL.hs  GLFunc.hs  GLScheduler.hs  JuicyPixels.hs  MState.hs  MVarLifted.hs  Name.hs  OBJ.hs  Params.hs  STL.hs  Shader.hs  Shader2.hs  ShaderCache.hs  ShaderEnv.hs  State.hs  Texture.hs  TextureCopy.hs  TextureExpr.hs  ToMain.hs  Tuple.hs  Uniform.hs  Utility.hs  Utils.hs  Vec.hs  VertexArray.hs  VertexArrayCopy.hs  WaitSwap.hs  Window.hs
test/: Main.hs  STL.hs  cube.stl  test.cap
test-resources/: cube1.stl  teapot1.stl  test.cap
