cabal-version:      3.0
name:               farbe
version:            0.1.0.0
synopsis: A graphics library for rendering in windows.
description: A fiercly simplified interface over OpenGL ES 2, providing an expression type for writing shaders.
license:            BSD-2-Clause
license-file:       LICENSE
author:             Vekkq
maintainer:         vekkq@vivaldi.net
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md
common warnings
    ghc-options: -Wall
library
--    import:         warnings

    exposed-modules: Graphics.Farbe
                   , Graphics.Farbe.Vec
                   , Graphics.Farbe.Tuple
                   , Graphics.Farbe.Window
                   , Graphics.Farbe.Utils
                   , Graphics.Farbe.STL
                   , Graphics.Farbe.Texture
                   , Graphics.Farbe.VertexArray
                   , Graphics.Farbe.Shader
                   , Graphics.Farbe.GL
                   , Graphics.Farbe.Counter

    build-depends: base ^>=4.21
                 , containers^>=0.7
                 , mtl^>=2.3
                 , gl^>=0.9
                 , GLFW-b^>=3.3
                 , array^>=0.5
                 , JuicyPixels^>=3.3
                 , bytestring^>=0.12
                 , binary^>=0.8.9
                 , vector^>=0.13

    hs-source-dirs:   src
    default-language: GHC2021

test-suite farbe-test
--    import:           warnings
    default-language: GHC2021
    other-modules: STL

    -- The interface type and version of the test suite.
    type:             exitcode-stdio-1.0

    hs-source-dirs:   test

    main-is:          Main.hs

    build-depends: base ^>=4.21
                 , farbe
                 , gl^>=0.9
                 , bytestring^>=0.12
                 , binary^>=0.8.9


