cabal-version:      3.0
name:               farbe
version:            0.1.0.0
synopsis: rendering library
description:
  A window and rendering library for the OpenGL ES 2 and GLFW. The library comes with an eDSL for shaders.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Vekkq
maintainer:         vekkq@vivaldi.net
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md
common warnings
    ghc-options: -Wall

flag juicypixels
    description: Use JuicyPixels and provide its module.
    default:     True
    manual:      True

flag wavefront
    description: Use wavefront for loading obj-Files and provide its module.
    default:     True
    manual:      True

library
    --import:         warnings

    exposed-modules: Graphics.Farbe
                   , Graphics.Farbe.Vec
                   , Graphics.Farbe.Window
                   , Graphics.Farbe.STL

    other-modules: Graphics.Farbe.Tuple
                 , Graphics.Farbe.VertexArray
                 , Graphics.Farbe.Array
                 , Graphics.Farbe.Shader
                 , Graphics.Farbe.GL
                 , Graphics.Farbe.Utility
                 , Graphics.Farbe.State
                 , Graphics.Farbe.Attribute
                 , Graphics.Farbe.Uniform
                 , Graphics.Farbe.ShaderEnv
                 , Graphics.Farbe.BuildShader
                 , Graphics.Farbe.Texture
                 , Graphics.Farbe.Expr


    build-depends: base ^>=4.18
                 , containers^>=0.7
                 , mtl^>=2.3
                 , gl^>=0.9
                 , GLFW-b^>=3.3
                 , array^>=0.5
                 , bytestring^>=0.12
                 , binary^>=0.8.9
                 , vector^>=0.13
                 , hashable^>=1.5

    if flag(juicypixels)
        build-depends: JuicyPixels^>=3.3
        exposed-modules: Graphics.Farbe.JuicyPixels

    if flag(wavefront)
        build-depends: wavefront>=0.7.1.5
        exposed-modules: Graphics.Farbe.OBJ

    hs-source-dirs:   src
    default-language: GHC2021

test-suite farbe-test
--    import:           warnings
    default-language: GHC2021
    other-modules:

    -- The interface type and version of the test suite.
    type:             exitcode-stdio-1.0

    hs-source-dirs:   test

    main-is:          Main.hs

    build-depends: base ^>=4.18
                 , farbe
                 , gl^>=0.9
                 , bytestring^>=0.12
                 , binary^>=0.8.9
                 , mtl^>=2.3


